--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@mantine/core": "^7.1.2",
+        "@mantine/form": "^7.1.2",
+        "@mantine/hooks": "^7.1.2",
+        "@mantine/notifications": "^7.1.2",
         "@reduxjs/toolkit": "^1.8.4",
         "axios": "^0.26.1",
         "next": "12.1.5",
@@ -32,6 +36,8 @@
         "husky": "^7.0.4",
         "lint-staged": "^12.1.2",
         "postcss": "^8.4.16",
+        "postcss-preset-mantine": "^1.8.0",
+        "postcss-simple-vars": "^7.0.1",
         "prettier": "^2.5.0",
         "stylelint": "^14.7.1",
         "stylelint-config-recommended-scss": "^6.0.0",
