--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
         "@mantine/hooks": "^7.1.2",
         "@mantine/notifications": "^7.1.2",
         "@reduxjs/toolkit": "^1.8.4",
-        "axios": "^0.26.1",
-        "next": "12.1.5",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
+        "axios": "^1.5.1",
+        "next": "13.5.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "react-hook-form": "^7.20.5",
         "react-icons": "^4.4.0",
         "react-redux": "^8.0.2",
         "sass": "^1.49.7"
     },
     "devDependencies": {
-        "@types/node": "^18.7.6",
-        "@types/react": "18.0.5",
+        "@types/node": "^20.8.2",
+        "@types/react": "18.2.25",
+        "@types/react-dom": "^18.2.10",
         "autoprefixer": "^10.4.8",
-        "eslint-config-next": "12.1.5",
+        "eslint-config-next": "13.5.4",
         "eslint_d": "^12.0.0",
-        "husky": "^7.0.4",
-        "lint-staged": "^12.1.2",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.1",
         "postcss": "^8.4.16",
         "postcss-preset-mantine": "^1.8.0",
         "postcss-simple-vars": "^7.0.1",
-        "prettier": "^2.5.0",
-        "stylelint": "^14.7.1",
-        "stylelint-config-recommended-scss": "^6.0.0",
+        "prettier": "^3.0.3",
+        "stylelint": "^15.10.3",
+        "stylelint-config-recommended-scss": "^13.0.0",
         "tailwindcss": "^3.1.8",
-        "typescript": "4.6.3"
+        "typescript": "5.2.2"
     },
     "lint-staged": {
         "*.{css,scss}": [
-            "prettier --write",
-            "stylelint --fix"
+            "prettier --write"
         ],
         "*.{ts,tsx,js,jsx}": [
             "prettier --write",
