--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@mantine/hooks": "^7.1.2",
         "@mantine/notifications": "^7.1.2",
         "@reduxjs/toolkit": "^1.8.4",
+        "@svgr/webpack": "^8.1.0",
         "axios": "^1.5.1",
         "next": "13.5.4",
         "react": "18.2.0",
@@ -32,8 +33,8 @@
         "@types/react": "18.2.25",
         "@types/react-dom": "^18.2.10",
         "autoprefixer": "^10.4.8",
-        "eslint-config-next": "13.5.4",
         "eslint_d": "^12.0.0",
+        "eslint-config-next": "13.5.4",
         "husky": "^8.0.3",
         "lint-staged": "^14.0.1",
         "postcss": "^8.4.16",
