--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@mantine/carousel": "^7.1.7",
         "@mantine/core": "^7.1.2",
         "@mantine/form": "^7.1.2",
         "@mantine/hooks": "^7.1.2",
@@ -20,6 +21,7 @@
         "@reduxjs/toolkit": "^1.8.4",
         "@svgr/webpack": "^8.1.0",
         "axios": "^1.5.1",
+        "embla-carousel-react": "^8.0.0-rc14",
         "next": "13.5.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -33,8 +35,8 @@
         "@types/react": "18.2.25",
         "@types/react-dom": "^18.2.10",
         "autoprefixer": "^10.4.8",
-        "eslint_d": "^12.0.0",
         "eslint-config-next": "13.5.4",
+        "eslint_d": "^12.0.0",
         "husky": "^8.0.3",
         "lint-staged": "^14.0.1",
         "postcss": "^8.4.16",
