feat(ui): add login cart and profile page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@svgr/webpack": "^8.1.0",
         "axios": "^1.5.1",
         "embla-carousel-react": "^8.0.0-rc14",
+        "js-cookie": "^3.0.5",
         "next": "13.5.4",
         "react": "18.2.0",
         "react-dom": "18.2.0",
