feat(google): google login

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
         "@mantine/form": "^7.1.2",
         "@mantine/hooks": "^7.1.2",
         "@mantine/notifications": "^7.1.2",
+        "@react-oauth/google": "^0.12.1",
         "@reduxjs/toolkit": "^1.8.4",
         "@svgr/webpack": "^8.1.0",
         "axios": "^1.5.1",
+        "cors": "^2.8.5",
         "dayjs": "^1.11.10",
         "embla-carousel-react": "^8.0.0-rc14",
         "js-cookie": "^3.0.5",
