--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mantine/form": "^7.1.2",
         "@mantine/hooks": "^7.1.2",
         "@mantine/notifications": "^7.1.2",
+        "@paypal/react-paypal-js": "^8.1.3",
         "@react-oauth/google": "^0.12.1",
         "@reduxjs/toolkit": "^1.8.4",
         "@svgr/webpack": "^8.1.0",
